lexbor: update to 2.4.0

--- a/mingw-w64-lexbor/PKGBUILD
+++ b/mingw-w64-lexbor/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=lexbor
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.3.0
+pkgver=2.4.0
 pkgrel=1
 pkgdesc="Fast C99 HTML renderer library (mingw-w64)"
 arch=('any')
@@ -14,7 +14,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("https://github.com/lexbor/lexbor/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('522ad446cd01d89cb870c6561944674e897f8ada523f234d5be1f8d2d7d236b7')
+sha256sums=('8949744d425743828891de6d80327ccb64b5146f71ff6c992644e6234e63930e')
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
@@ -33,7 +33,7 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       -DLEXBOR_C_FLAGS="-Wno-pedantic-ms-format -Wall -pedantic -pipe -std=c99" \
-      -DLEXBOR_CPP_FLAGS="-Wno-pedantic-ms-format -Wall -pedantic -pipe -std=c99" \
+      -DLEXBOR_CXX_FLAGS="-Wno-pedantic-ms-format -Wall -pedantic -pipe -std=c99" \
       -DLEXBOR_BUILD_TESTS=ON \
       -DLEXBOR_BUILD_TESTS_CPP=ON \
       "${extra_config[@]}" \
