--- a/mingw-w64-swig/PKGBUILD
+++ b/mingw-w64-swig/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.2.1
 pkgrel=1
 pkgdesc="Generate scripting interfaces to C/C++ code (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="http://www.swig.org/"
 msys2_repository_url="https://github.com/swig/swig"
 license=('custom')
