qt6-static: Use PKG_CONFIG_ARGN instead of PKG_CONFIG.

--- a/mingw-w64-qt6-static/PKGBUILD
+++ b/mingw-w64-qt6-static/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}-static
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-static")
 _qtver=6.8.0
 pkgver=${_qtver/-/}
-pkgrel=1
+pkgrel=2
 pkgdesc="A cross-platform application and UI framework (mingw-w64)"
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -32,7 +32,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              #"${MINGW_PACKAGE_PREFIX}-graphite2"
              #"${MINGW_PACKAGE_PREFIX}-harfbuzz"
              "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
-             "${MINGW_PACKAGE_PREFIX}-libmng"
+             #"${MINGW_PACKAGE_PREFIX}-libmng"
              "${MINGW_PACKAGE_PREFIX}-libpng"
              "${MINGW_PACKAGE_PREFIX}-libtiff"
              "${MINGW_PACKAGE_PREFIX}-libwebp"
@@ -141,7 +141,7 @@ prepare() {
 build() {
   mkdir -p B${MSYSTEM} && cd B${MSYSTEM}
 
-  PKG_CONFIG="${MINGW_PREIX}/bin/pkgconf.exe --static" \
+  PKG_CONFIG_ARGN="--static" \
   LDFLAGS+=" -static -static-libgcc -static-libstdc++" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=;-DCMAKE_CONFIGURATION_TYPES=;-DCMAKE_FIND_LIBRARY_SUFFIXES=" \
   ${MINGW_PREFIX}/bin/cmake \
