flang: drop MINGW64
It fails to build because It requires TIME_UTC which is only available for UCRT.

--- a/mingw-w64-flang/PKGBUILD
+++ b/mingw-w64-flang/PKGBUILD
@@ -12,7 +12,7 @@ pkgver=${_version}${_rc/-/}
 pkgrel=1
 pkgdesc="Fortran frontend for LLVM (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url="https://flang.llvm.org/"
 msys2_references=(
   "cpe: cpe:/a:llvm:llvm"
