qt6-static: Fix build against latest mingw-w64

--- a/mingw-w64-qt6-static/PKGBUILD
+++ b/mingw-w64-qt6-static/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}-static
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-static")
 _qtver=6.8.0
 pkgver=${_qtver/-/}
-pkgrel=2
+pkgrel=3
 pkgdesc="A cross-platform application and UI framework (mingw-w64)"
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -141,6 +141,7 @@ prepare() {
 build() {
   mkdir -p B${MSYSTEM} && cd B${MSYSTEM}
 
+  CXXFLAGS+=" -Wno-invalid-constexpr" \
   PKG_CONFIG_ARGN="--static" \
   LDFLAGS+=" -static -static-libgcc -static-libstdc++" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=;-DCMAKE_CONFIGURATION_TYPES=;-DCMAKE_FIND_LIBRARY_SUFFIXES=" \
