inkscape: add fix for poppler-24.11

--- a/mingw-w64-inkscape/PKGBUILD
+++ b/mingw-w64-inkscape/PKGBUILD
@@ -73,15 +73,17 @@ optdepends=(#"${MINGW_PACKAGE_PREFIX}-pstoedit: latex formulas"
             #"${MINGW_PACKAGE_PREFIX}-uniconvertor: reading/writing to some proprietary formats"
             )
 source=("https://media.inkscape.org/dl/resources/file/${_realname}-${pkgver}.tar.xz"
+        "inkscape-poppler-24.10.patch::https://gitlab.com/inkscape/inkscape/-/commit/22304ae8034d067670a9f95022083a75fac92b4c.patch"
+        "inkscape-poppler-24.11.patch::https://gitlab.com/inkscape/inkscape/-/commit/0399372ec240d23e0e70548237a541f2b5bf0f34.patch"
         inkscape-1.0.1-unbundle.patch
         inkscape-1.0.1-install-layout.patch
-        007-no-console-clang.patch
-        008-poppler.patch)
+        007-no-console-clang.patch)
 sha256sums=('c59a85453b699addebcd51c1dc07684dd96a10c8aec716b19551db50562e13f5'
+            'f2ce2d04cfd8b7db046c57cdc2fd4dc8d5946642f7d47b1d8b87ebc2cd6e8ccc'
+            'ce742fe3c522508eb0faaa36076e13fca876de3bc42117ace0a1ecebda73d78d'
             '92387251c1740f1a57cde9e587cc673ef1600813617bd2c9db65598c324a24d4'
             '131b2e1190637df0554ef1ee8cf46440689584375c117d057ab47d5871c58128'
-            'c49d38b7c1a66e4b40e1b75fb055b730eb863a67a74d899da6d4d6db6baedcec'
-            'f2ce2d04cfd8b7db046c57cdc2fd4dc8d5946642f7d47b1d8b87ebc2cd6e8ccc')
+            'c49d38b7c1a66e4b40e1b75fb055b730eb863a67a74d899da6d4d6db6baedcec')
 noextract=("${_realname}-${pkgver}.tar.xz")
 
 apply_patch_with_msg() {
@@ -100,6 +102,8 @@ prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
 
   apply_patch_with_msg \
+    inkscape-poppler-24.10.patch \
+    inkscape-poppler-24.11.patch \
     inkscape-1.0.1-unbundle.patch \
     inkscape-1.0.1-install-layout.patch \
     007-no-console-clang.patch
