--- a/mingw-w64-winstorecompat-git/PKGBUILD
+++ b/mingw-w64-winstorecompat-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=winstorecompat
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r386.gc6857dc97
+pkgver=12.0.0.r387.gcf5c50cce
 pkgrel=1
-_commit='c6857dc97a70e5587e639a107255b0d2d1e7a200'
+_commit='cf5c50cce0b4f8610eafd95443d1d3767de386a5'
 pkgdesc="MinGW-w64 winRT compat library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "git")
 options=('!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('8deabe607a8bc8ddf6894574c5367416373d83593a4806eb6bf225f4113715ff')
+sha256sums=('9336193b835601cb8309244f4415312905dbe311390bb082978857e235130d05')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
