mesa: update to 24.2.7

--- a/mingw-w64-mesa/PKGBUILD
+++ b/mingw-w64-mesa/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=mesa
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=24.2.6
-pkgrel=3
+pkgver=24.2.7
+pkgrel=1
 pkgdesc="Open-source implementation of the OpenGL, Vulkan and OpenCL specifications (mingw-w64)"
 url="https://www.mesa3d.org/"
 msys2_references=(
@@ -40,7 +40,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-opengl-man-pages: for the OpenGL API man pa
             "${MINGW_PACKAGE_PREFIX}-vulkan-validation-layers: to debug applications using Vulkan graphics")
 source=(https://mesa.freedesktop.org/archive/${_realname}-${pkgver}.tar.xz{,.sig}
         0000-addrlib-workaround-old-cpu-target.patch)
-sha256sums=('2b68c4a6f204c1999815a457299f81c41ba7bf48c4674b0b2d1d8864f41f3709'
+sha256sums=('a0ce37228679647268a83b3652d859dcf23d6f6430d751489d4464f6de6459fd'
             'SKIP'
             '4e511b1ab380d0e7d1f152f89c82665e5ef7de96f26de1b5597aa1db85cfc5a4')
 validpgpkeys=('8703B6700E7EE06D7A39B8D6EDAE37B02CEB490D') # Emil Velikov <emil.l.velikov@gmail.com>
@@ -113,7 +113,7 @@ build() {
   PROCESSOR_ARCHITECTURE="${CARCH}" \
   ${MINGW_PREFIX}/bin/meson setup \
   -Dc_args="${CFLAGS}" \
-  -Dcpp_args="${CXXFLAGS} -Wno-invalid-constexpr" \
+  -Dcpp_args="${CXXFLAGS}" \
   "${_meson_options[@]}" \
   "build-${MSYSTEM}" \
   "${_realname}-${pkgver}"
