python-scipy: Re-enable on clang environments

--- a/mingw-w64-python-scipy/PKGBUILD
+++ b/mingw-w64-python-scipy/PKGBUILD
@@ -4,14 +4,11 @@
 _realname=scipy
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=1.14.0
-pkgrel=3
+pkgrel=5
 pkgdesc="SciPy is open-source software for mathematics, science, and engineering (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.scipy.org/"
 msys2_repository_url="https://github.com/scipy/scipy"
 msys2_references=(
@@ -22,6 +19,7 @@ license=('spdx:BSD-3-Clause')
 depends=(
   $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-libgfortran")
   "${MINGW_PACKAGE_PREFIX}-openblas"
+  "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-numpy")
 optdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-pillow: for image saving module"
@@ -41,10 +39,12 @@ makedepends=(
 )
 source=("https://pypi.python.org/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         "001-no-static-linking.patch"
-        "002-no-long-double-64.patch")
+        "002-no-long-double-64.patch"
+        "003-fix-typo.patch::https://github.com/scipy/scipy/commit/ab7d08c6.patch")
 sha256sums=('b5923f48cb840380f9854339176ef21763118a7300a88203ccd0bdd26e58527b'
             'd418dffecdce7c746d08db5d6301798d6b60444572d85f10789e07995397f2a2'
-            '5531a507a0c958687e7476f896d88dbd6f948f121f75da46e2eee31be9f0b8ca')
+            '5531a507a0c958687e7476f896d88dbd6f948f121f75da46e2eee31be9f0b8ca'
+            '41f357e513cdad1f4dcef1ff299915f2e540d95dcc722d72c9b25bc5a4abfab8')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -59,7 +59,8 @@ prepare() {
 
   apply_patch_with_msg \
     001-no-static-linking.patch \
-    002-no-long-double-64.patch
+    002-no-long-double-64.patch \
+    003-fix-typo.patch
 }
 
 build() {
@@ -84,12 +85,6 @@ build() {
       -Dwarning_level=0 \
       "${_extra_config[@]}" \
       ../${_realname}-${pkgver}
-
-  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
-    sed -s "s|\"-module\"|\"-module-dir\"|g" -i build.ninja
-    sed -s "s|-lflang||g" -i build.ninja
-    sed -s "s|-lpgmath||g" -i build.ninja
-  fi
 
   ${MINGW_PREFIX}/bin/meson compile
 }
