--- a/mingw-w64-python-scipy/PKGBUILD
+++ b/mingw-w64-python-scipy/PKGBUILD
@@ -4,8 +4,8 @@
 _realname=scipy
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.14.0
-pkgrel=5
+pkgver=1.14.1
+pkgrel=1
 pkgdesc="SciPy is open-source software for mathematics, science, and engineering (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -39,12 +39,10 @@ makedepends=(
 )
 source=("https://pypi.python.org/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         "001-no-static-linking.patch"
-        "002-no-long-double-64.patch"
-        "003-fix-typo.patch::https://github.com/scipy/scipy/commit/ab7d08c6.patch")
-sha256sums=('b5923f48cb840380f9854339176ef21763118a7300a88203ccd0bdd26e58527b'
+        "002-no-long-double-64.patch")
+sha256sums=('5a275584e726026a5699459aa72f828a610821006228e841b94275c4a7c08417'
             'd418dffecdce7c746d08db5d6301798d6b60444572d85f10789e07995397f2a2'
-            '5531a507a0c958687e7476f896d88dbd6f948f121f75da46e2eee31be9f0b8ca'
-            '41f357e513cdad1f4dcef1ff299915f2e540d95dcc722d72c9b25bc5a4abfab8')
+            '5531a507a0c958687e7476f896d88dbd6f948f121f75da46e2eee31be9f0b8ca')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -59,8 +57,7 @@ prepare() {
 
   apply_patch_with_msg \
     001-no-static-linking.patch \
-    002-no-long-double-64.patch \
-    003-fix-typo.patch
+    002-no-long-double-64.patch
 }
 
 build() {
