Re-enable scipy dependent packages on clang environments

--- a/mingw-w64-python-colour-science/PKGBUILD
+++ b/mingw-w64-python-colour-science/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.4.6
 pkgrel=2
 pkgdesc="Python library for a multitude of colour science applications (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.colour-science.org'
 msys2_repository_url='https://github.com/colour-science/colour'
 msys2_references=(
