--- a/mingw-w64-python-seaborn/PKGBUILD
+++ b/mingw-w64-python-seaborn/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=0.13.2
 pkgrel=3
 pkgdesc="Statistical data visualization using matplotlib (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='http://seaborn.pydata.org'
 msys2_repository_url="https://github.com/mwaskom/seaborn"
 msys2_references=(
