--- a/mingw-w64-python-statsmodels/PKGBUILD
+++ b/mingw-w64-python-statsmodels/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=0.14.2
 pkgrel=3
 pkgdesc="Statistical computations and models for use with SciPy (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.statsmodels.org"
 msys2_repository_url="https://github.com/statsmodels/statsmodels"
 msys2_references=(
