--- a/mingw-w64-python-umap-learn/PKGBUILD
+++ b/mingw-w64-python-umap-learn/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.5.6
 pkgrel=3
 pkgdesc='Uniform Manifold Approximation and Projection (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: umap-learn'
 )
