--- a/mingw-w64-python-openmdao/PKGBUILD
+++ b/mingw-w64-python-openmdao/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.34.2
 pkgrel=3
 pkgdesc="An open-source MDAO framework written in Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://openmdao.org/"
 msys2_repository_url='https://github.com/OpenMDAO/OpenMDAO'
 msys2_references=(
