--- a/mingw-w64-python-pyamg/PKGBUILD
+++ b/mingw-w64-python-pyamg/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=5.2.1
 pkgrel=3
 pkgdesc="PyAMG: Algebraic Multigrid Solvers in Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/pyamg/pyamg"
 msys2_references=(
   'pypi: pyamg'
