--- a/mingw-w64-python-pydoe2/PKGBUILD
+++ b/mingw-w64-python-pydoe2/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.3.0
 pkgrel=5
 pkgdesc='An experimental design package for python. (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/clicumu/pyDOE2"
 msys2_references=(
   'pypi: pyDOE2'
