--- a/mingw-w64-python-pynndescent/PKGBUILD
+++ b/mingw-w64-python-pynndescent/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.5.13
 pkgrel=3
 pkgdesc='Nearest Neighbor Descent (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/lmcinnes/pynndescent"
 msys2_references=(
   'aur: python-pynndescent'
