--- a/mingw-w64-python-pystoi/PKGBUILD
+++ b/mingw-w64-python-pystoi/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.4.1
 pkgrel=2
 pkgdesc='Python implementation of the Short Term Objective Intelligibility measure (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/mpariente/pystoi"
 msys2_references=(
   'pypi: pystoi'
