--- a/mingw-w64-python-scikit-image/PKGBUILD
+++ b/mingw-w64-python-scikit-image/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=0.24.0
 pkgrel=2
 pkgdesc='Image processing routines for SciPy (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://scikit-image.org/"
 msys2_repository_url="https://github.com/scikit-image/scikit-image"
 msys2_references=(
