--- a/mingw-w64-python-scikit-learn/PKGBUILD
+++ b/mingw-w64-python-scikit-learn/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.5.1
 pkgrel=4
 pkgdesc="A set of python modules for machine learning and data mining (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://scikit-learn.org'
 msys2_repository_url="https://github.com/scikit-learn/scikit-learn"
 msys2_references=(
