--- a/mingw-w64-python-similarity_measures/PKGBUILD
+++ b/mingw-w64-python-similarity_measures/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.0
 pkgrel=2
 pkgdesc="Quantify the difference between two arbitrary curves (mingw64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/cjekel/similarity_measures"
 msys2_references=(
   'pypi: similaritymeasures'
