libobjc2: Build with strict Apple compatibility
By default, Objective C's `BOOL` type is an `(un)signed char`. libobjc2 would define BOOL as `int` on the Windows platform, to avoid a clash with the Windows `BOOL` type.

However, MSYS2 uses `WINBOOL` instead of `BOOL` to avoid this clash.

Hence:
- Align the libobjc2 configuration with the Apple and use libobjc2 with the `STRICT_APPLE_COMPATIBILITY=1` flag set.  This aligns with the behavior of the GCC libobjc runtime.
- Configure `gnustep-make` with `CFLAGS=-DSTRICT_APPLE_COMPATIBILITY=1` to make sure GNUstep picks up this configuration
- Rebuild the other GNUstep packages
- Rebuild libpreferencepanes

--- a/mingw-w64-gnustep-make/PKGBUILD
+++ b/mingw-w64-gnustep-make/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gnustep-make
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.9.2
-pkgrel=2
+pkgrel=3
 pkgdesc="GNUstep build system (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -35,6 +35,7 @@ build() {
       ;;
   esac
 
+  CFLAGS+=" -DSTRICT_APPLE_COMPATIBILITY=1" \
   CC="$MINGW_PREFIX/bin/clang" \
   CXX="$MINGW_PREFIX/bin/clang++" \
   ../"${_realname}-${pkgver}"/configure \
