--- a/mingw-w64-libobjc2/PKGBUILD
+++ b/mingw-w64-libobjc2/PKGBUILD
@@ -7,7 +7,7 @@ if [[ ${MSYSTEM} != CLANG* ]]; then
   conflicts=("${MINGW_PACKAGE_PREFIX}-gcc-objc")
 fi
 pkgver=2.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Objective-C runtime library intended for use with Clang. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -18,8 +18,21 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-lld"
              'git')
-source=("https://github.com/gnustep/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('768ea8c5bd0999a29b5d15781125494f986456c1dc5c51d370fb31852cd31ea1')
+source=("https://github.com/gnustep/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
+        # Windows: Support building with strict compatibility, backport of https://github.com/gnustep/libobjc2/commit/2466c57c59d827b0ff199aaa6748739da99f8bbb.patch
+        "0001-Windows-Support-building-with-strict-compatibility.patch"
+        # Fix selector forwarding on x64 Windows - https://github.com/gnustep/libobjc2/pull/313
+        "https://github.com/gnustep/libobjc2/commit/47d02a8898777c681d263259b0e70d296813f5ff.patch")
+sha256sums=('768ea8c5bd0999a29b5d15781125494f986456c1dc5c51d370fb31852cd31ea1'
+            '7ef5b80e2b33317cac280ed24b3fdef746f17af056f70ce267af646c776a03ec'
+            'e78cc419a4300739f6e874ba5eb480e2ec5c216be4da51897537d0f213bea8f0')
+
+prepare() {
+  cd "${srcdir}/${_realname}-${pkgver}"
+
+  patch -p1 -i ${srcdir}/0001-Windows-Support-building-with-strict-compatibility.patch
+  patch -p1 -i ${srcdir}/47d02a8898777c681d263259b0e70d296813f5ff.patch
+}
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -46,6 +59,7 @@ build() {
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       -DCMAKE_C_COMPILER="clang" \
       -DCMAKE_CXX_COMPILER="clang++" \
+      -DSTRICT_APPLE_COMPATIBILITY=ON \
       -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
       -DTESTS=OFF \
       "${extra_config[@]}" \
