zed: disable CLANGARM64 turns out ring v0.16.20 is pulled indirectly at build (zed-industries/zed#19739) and even after manual update it fails at runtime (zed-industries/zed#17374)

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.161.2
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://zed.dev'
 msys2_repository_url='https://github.com/zed-industries/zed'
 msys2_documentation_url='https://zed.dev/docs'
