manim: remove clangarm64 again
depends on python-skia-pathops (which in turn depends on skia)
and both have no clangarm64 builds atm

--- a/mingw-w64-manim/PKGBUILD
+++ b/mingw-w64-manim/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.18.1
 pkgrel=4
 pkgdesc="Animation engine for explanatory math videos (community edition) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://www.manim.community'
 msys2_repository_url='https://github.com/ManimCommunity/manim'
 msys2_references=(
