fix poppler bug: missing structtreeroot

--- a/mingw-w64-poppler/PKGBUILD
+++ b/mingw-w64-poppler/PKGBUILD
@@ -41,17 +41,20 @@ depends=("${MINGW_PACKAGE_PREFIX}-cairo"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 source=(https://poppler.freedesktop.org/${_realname}-${pkgver}.tar.xz{,.sig}
         test::git+https://gitlab.freedesktop.org/poppler/test.git#commit=ff3133cdb6cb496ee1d2c3231bfa35006a5e8410
-        '0001-nopython-generate-enums.patch')
+        '0001-nopython-generate-enums.patch'
+        '0002-fix-structtreeroot-2411.patch')
 sha256sums=('7723d880565211740c13649d24a300257b86ddd7fa2d208187ff7e5cc8dfbd58'
             'SKIP'
             '0efc9bd1797f0f0dfa514d4109e82c99d7e98c3e95587c70945508493074fcdf'
-            '315356263b5ebee5431a2e079ac76492a8919a04a798f6c6d53c64f44b433db6')
+            '315356263b5ebee5431a2e079ac76492a8919a04a798f6c6d53c64f44b433db6'
+            '50bbcb11600a50d167a46c65dabdb1c6ef9acb4873831a71e1c8633b3b6e1d90')
 validpgpkeys=('CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7') # "Albert Astals Cid <aacid@kde.org>"
 
 prepare() {
   cd ${_realname}-${pkgver}
 
   patch -p1 -i "${srcdir}/0001-nopython-generate-enums.patch"
+  patch -p1 -i "${srcdir}/0002-fix-structtreeroot-2411.patch"
 }
 
 build() {
