--- a/mingw-w64-uv/PKGBUILD
+++ b/mingw-w64-uv/PKGBUILD
@@ -4,7 +4,7 @@ _realname=uv
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.5.0
+pkgver=0.5.2
 pkgrel=1
 pkgdesc='An extremely fast Python package installer and resolver, written in Rust (mingw-w64)'
 arch=('any')
@@ -29,7 +29,7 @@ source=("git+${url}.git#tag=${pkgver}"
         "bzip2-sys.tar.gz::https://crates.io/api/v1/crates/bzip2-sys/0.1.11+1.0.8/download"
         "bzip2-use-pkgconfig.patch"
         "link-zstd-dynamically.patch")
-sha256sums=('961ca048ae0d139b5394d8bee69ccf428749ea91636e3bc1eb367e4978285ce4'
+sha256sums=('e980fac5ec16ee68a59e3523520e56896017249f810b760ca2e3c8e8403d05c4'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             '736a955f3fa7875102d57c82b8cac37ec45224a07fd32d58f9f7a186b6cd4cdc'
             'f73309fb98b89b2085bccee6ffb66820082628d096bc989922b25d33a1f5f378'
@@ -37,9 +37,15 @@ sha256sums=('961ca048ae0d139b5394d8bee69ccf428749ea91636e3bc1eb367e4978285ce4'
 
 prepare() {
   cd "${_realname}"
-  sed -i '/\[patch\.crates-io\]/a zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }\nbzip2-sys = { path = "../bzip2-sys-0.1.11+1.0.8" }' Cargo.toml
+
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../link-zstd-dynamically.patch"
   patch -d "../bzip2-sys-0.1.11+1.0.8" -i "../bzip2-use-pkgconfig.patch"
+  cat >> Cargo.toml <<END
+
+[patch.crates-io]
+bzip2-sys = { path = "../bzip2-sys-0.1.11+1.0.8" }
+zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }
+END
 
   rm rust-toolchain.toml
   cargo update -p zstd-sys -p bzip2-sys
