lexbor: workraround build issue

--- a/mingw-w64-lexbor/PKGBUILD
+++ b/mingw-w64-lexbor/PKGBUILD
@@ -40,7 +40,8 @@ build() {
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}"
 
-  cmake --build "build-${MSYSTEM}"
+  # Workaround: try to build twice to fix dll copy issue
+  cmake --build "build-${MSYSTEM}" || cmake --build "build-${MSYSTEM}"
 }
 
 check() {
