--- a/mingw-w64-darktable/PKGBUILD
+++ b/mingw-w64-darktable/PKGBUILD
@@ -4,7 +4,7 @@ _realname=darktable
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=4.8.1
-pkgrel=1
+pkgrel=2
 pkgdesc="darktable is an open source photography workflow application and raw developer (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -56,10 +56,19 @@ depends=("${MINGW_PACKAGE_PREFIX}-curl"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 # Disable strip option to write backtraces with drmingw
 options=('!strip')
-source=("https://github.com/darktable-org/${_realname}/releases/download/release-${pkgver}/${_realname}-${pkgver}.tar.xz"{,.asc})
+source=("https://github.com/darktable-org/${_realname}/releases/download/release-${pkgver}/${_realname}-${pkgver}.tar.xz"{,.asc}
+        "https://github.com/darktable-org/rawspeed/commit/f8690db92c2112a6f7ee1d4db9182ad76ee9bcc5.patch")
 sha256sums=('901b0e2caed36fb8619fdf4c60edfb8d31134b947d3054b5c66fd55c38af5991'
-            'SKIP')
+            'SKIP'
+            'f81c4692cef7eb10e2dba8c1ab0d0ccf46c4fd59e39b4fa7e91b230998724217')
 validpgpkeys=('F10F9686652B0E949FCD94C318DCA123F949BD3B') # Pascal Obry <pascal@obry.net>
+
+prepare() {
+  cd "${_realname}-${pkgver}"/src/external/rawspeed
+
+  # fix compilation w/ clang 19
+  patch -Np1 -i "${srcdir}"/f8690db92c2112a6f7ee1d4db9182ad76ee9bcc5.patch
+}
 
 build() {
   mkdir -p "${srcdir}"/build-${MSYSTEM} && cd "${srcdir}"/build-${MSYSTEM}
