--- a/mingw-w64-gimp/PKGBUILD
+++ b/mingw-w64-gimp/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gimp
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.10.38
-pkgrel=1
+pkgrel=2
 pkgdesc="GNU Image Manipulation Program (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
@@ -55,6 +55,7 @@ source=(https://download.gimp.org/pub/gimp/v${pkgver%.*}/${_realname}-${pkgver}.
         0004-replace-pygtk-codegen.patch
         0005-fix-link-python-plugins.patch
         0007-clang-rc-files-fix.patch
+        0008-avoid-incompatible-pointer-cast.patch::https://gitlab.gnome.org/GNOME/gimp/-/commit/24df4f1fc800f11e44c44f8036e7d8d7ee90b62a.patch
         https://gitlab.gnome.org/GNOME/gimp/-/commit/13284c8953b43e349dc94a6c5bcc9dbf4e98533f.patch)
 sha256sums=('50a845eec11c8831fe8661707950f5b8446e35f30edfb9acf98f85c1133f856e'
             'f7f9badc547f1a0317b95e012530db8df63b7c7038c9d9ff8d0b510c86f43439'
@@ -63,6 +64,7 @@ sha256sums=('50a845eec11c8831fe8661707950f5b8446e35f30edfb9acf98f85c1133f856e'
             '98b6212e669eb3a93877514ee6d3284cb3a44ae6d57b6ecb29de3a076db3dbd2'
             '01651bb582b2120aae67752f6a28c0750ea690d46259d855e28f8b18da567bf5'
             'f4f8258b352530b0f9dd1ebd4f4730125caa4d047ca17bf9e5180b52be19c117'
+            '49f8078b10bcd5fe98236e51a3272651f80be630ae97ab2ec9aa00bd9c7ef503'
             '3d346b0d7cb9ab534501f5e1a5d543a54dc16bb16b884a2fc42382c6a5b82cbf')
 
 apply_patch_with_msg() {
@@ -82,6 +84,7 @@ prepare() {
     0004-replace-pygtk-codegen.patch \
     0005-fix-link-python-plugins.patch \
     0007-clang-rc-files-fix.patch \
+    0008-avoid-incompatible-pointer-cast.patch \
     13284c8953b43e349dc94a6c5bcc9dbf4e98533f.patch
 
   sed -e "s|-Wl,-rpath '-Wl,\$\$ORIGIN/../lib'||g" -i app/Makefile.am
