--- a/mingw-w64-tbb/PKGBUILD
+++ b/mingw-w64-tbb/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=oneTBB
 pkgbase=mingw-w64-tbb
 pkgname=("${MINGW_PACKAGE_PREFIX}-tbb")
-pkgver=2021.13.0
+pkgver=2022.0.0
 pkgrel=1
 pkgdesc='oneAPI Threading Building Blocks (mingw-w64)'
 arch=(any)
@@ -24,10 +24,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("https://github.com/oneapi-src/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         001-fix-using-TBB-with-Debug-build-type.patch
-        002-fix-link-flags-on-mingw.patch)
-sha256sums=('3ad5dd08954b39d113dc5b3f8a8dc6dc1fd5250032b7c491eb07aed5c94133e1'
+        002-fix-link-flags-on-mingw.patch
+        003-fix-getting-assembler-version-on-mingw.patch)
+sha256sums=('e8e89c9c345415b17b30a2db3095ba9d47647611662073f7fbf54ad48b7f3c2a'
             '094c556a1087563a3a5810db0fa81aed6432b3a8e91aab9a747e9a55ea262f2a'
-            '7105abda9ae82825bb7df12ed5bfba698b896945fca0023dcd040e51b3b7f1cf')
+            '7105abda9ae82825bb7df12ed5bfba698b896945fca0023dcd040e51b3b7f1cf'
+            'cdac0450805f106220ac087b867b10af5066dc01a4272c037b0de2b7f53d0fe1')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -41,7 +43,8 @@ prepare() {
   cd ${_realname}-${pkgver}
   apply_patch_with_msg \
     001-fix-using-TBB-with-Debug-build-type.patch \
-    002-fix-link-flags-on-mingw.patch
+    002-fix-link-flags-on-mingw.patch \
+    003-fix-getting-assembler-version-on-mingw.patch
 
   find . -name "*.orig" -exec rm -f {} \;
 }
@@ -54,6 +57,13 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
+  if [[ ${CC} == gcc ]]; then
+    _extra_config+=("-DTBB_ENABLE_IPO=OFF")
+  else
+    _extra_config+=("-DTBB_ENABLE_IPO=ON")
+  fi
+
+  CXX="${CXX}" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
     -GNinja \
