Add -p to mkdir to enable resuming/restarting build without "path already exists" error

--- a/mingw-w64-gdb/PKGBUILD
+++ b/mingw-w64-gdb/PKGBUILD
@@ -82,7 +82,7 @@ prepare() {
 
 do_build() {
   builddir=${srcdir}/build-${MSYSTEM}$1
-  mkdir ${builddir} && cd ${builddir}
+  mkdir -p ${builddir} && cd ${builddir}
 
   if [ "${CARCH}" != "x86_64" ]; then
     LDFLAGS+=" -Wl,--large-address-aware"
