spdlog: add soversion to the DLL name
so we notice if there is an ABI break

--- a/mingw-w64-spdlog/PKGBUILD
+++ b/mingw-w64-spdlog/PKGBUILD
@@ -58,6 +58,7 @@ build() {
     -DSPDLOG_BUILD_TESTS=OFF \
     -DSPDLOG_FMT_EXTERNAL=ON \
     -DSPDLOG_BUILD_SHARED=ON \
+    -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
     -DCMAKE_RUNTIME_OUTPUT_DIRECTORY="${srcdir}/build-${MSYSTEM}" \
     ../${_realname}-${pkgver}
 
