qt5-static: update to 5.15.16
- update to latest
- drop MINGW32

--- a/mingw-w64-qt5-static/PKGBUILD
+++ b/mingw-w64-qt5-static/PKGBUILD
@@ -5,11 +5,11 @@
 _realname=qt5-static
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=5.15.15
-pkgrel=2
+pkgver=5.15.16
+pkgrel=1
 pkgdesc="A cross-platform application and UI framework (static) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.qt.io/'
 msys2_references=(
   'archlinux: qt5-base'
@@ -82,7 +82,7 @@ source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/${pkgver}/singl
         0403-qtactiveqt-tools-avoid-race-condition.patch
         0411-javascriptcore-disable-deprecated-warnings.patch
         0412-jitstubs-underscore-symbol-name-for-x86.patch)
-sha256sums=('b423c30fe3ace7402e5301afbb464febfb3da33d6282a37a665be1e51502335e'
+sha256sums=('efa99827027782974356aceff8a52bd3d2a8a93a54dd0db4cca41b5e35f1041c'
             '884b32f0e2e1bb110330a921b69443379a7be98c42f13754f9c5f56c040ba3b7'
             '617e6fa85a92353d0073425d37cd5d90d92cb7f906d66dd2d0df576122d091a4'
             '27ce2161b5dbea2fcce6b15948ab722a71036d056420854f6554969f683583bb'
@@ -131,7 +131,6 @@ sha256sums=('b423c30fe3ace7402e5301afbb464febfb3da33d6282a37a665be1e51502335e'
             '614b027c94784fcfd7979cea3326b75d8415da2dbd0ab7d5181ad04c21341644'
             '62616c2b8aa19afbcb1bd6d05427ddfc87fa3bc6ed0bc1a688f80d8e95742bca')
 
-# Helper macros to help make tasks easier #
 apply_patch_with_msg() {
   for _patch in "$@"
   do
