--- a/mingw-w64-ossia-score/PKGBUILD
+++ b/mingw-w64-ossia-score/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.2.4
 pkgrel=5
 pkgdesc="ossia score, an interactive sequencer for the intermedia arts"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64')
 url="https://ossia.io"
 license=('spdx:GPL-3.0-or-later')
 depends=(
