ruff: update to 0.7.4

--- a/mingw-w64-ruff/PKGBUILD
+++ b/mingw-w64-ruff/PKGBUILD
@@ -4,7 +4,7 @@ _realname=ruff
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.7.3
+pkgver=0.7.4
 pkgrel=1
 pkgdesc="An extremely fast Python linter, written in Rust (mingw-w64)"
 arch=('any')
@@ -26,7 +26,7 @@ makedepends=(
 )
 options=('!strip' '!lto')
 source=("git+${msys2_repository_url}.git#tag=${pkgver}")
-sha256sums=('b24ad19db52a3df27147d19ab311ff29594f7fcc113c948c2aa50087f0f3494e')
+sha256sums=('c475d650df4e8d464872933bf557a1d81d0bd0eac720ffaf03224264e9dc8939')
 
 prepare() {
   cd "${_realname}"
@@ -34,6 +34,7 @@ prepare() {
   # otherwise cargo installs msvc toolchain from rustup
   rm rust-toolchain.toml
 
+  cargo update -p cc
   cargo fetch --locked
 }
 
