--- a/mingw-w64-fastfetch/PKGBUILD
+++ b/mingw-w64-fastfetch/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=fastfetch
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.30.0
+pkgver=2.30.1
 pkgrel=1
 pkgdesc="An actively maintained, feature-rich and performance oriented, neofetch like system information tool (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/fastfetch-cli/fastfetch"
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
@@ -25,7 +25,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-vulkan-loader: For Vulkan detection support
             "${MINGW_PACKAGE_PREFIX}-chafa: For chafa image protocol support"
             "${MINGW_PACKAGE_PREFIX}-imagemagick: For sixel image protocol support")
 source=("https://github.com/fastfetch-cli/fastfetch/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('5047f925e480e065e8b28da1e6cc5b31ffdc1ad205ec74a9ea709fb5bcaacd8a')
+sha256sums=('5248311a3d8ce65f6f48756dfc0df9f8922d64f5201ee8d980497d52e924906e')
 
 build() {
   declare -a extra_config
