projectchrono: enable module vsg

--- a/mingw-w64-projectchrono/PKGBUILD
+++ b/mingw-w64-projectchrono/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=9.0.1
 _mjver=2.7.9
-pkgrel=3
+pkgrel=4
 pkgdesc='High-performance C++ library for multiphysics and multibody dynamics simulations (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -19,27 +19,33 @@ depends=("${MINGW_PACKAGE_PREFIX}-eigen3"
          "${MINGW_PACKAGE_PREFIX}-glm"
          "${MINGW_PACKAGE_PREFIX}-glew"
          "${MINGW_PACKAGE_PREFIX}-glfw"
+         "${MINGW_PACKAGE_PREFIX}-vulkanscenegraph"
+         "${MINGW_PACKAGE_PREFIX}-vsgimgui"
+         "${MINGW_PACKAGE_PREFIX}-vsgxchange"
          "${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-swig"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-doxygen"
-             "${MINGW_PACKAGE_PREFIX}-graphviz")
+             "${MINGW_PACKAGE_PREFIX}-graphviz"
+             "${MINGW_PACKAGE_PREFIX}-vulkan-headers")
 source=("${msys2_repository_url}/archive/${pkgver}/${_basename}-${pkgver}.tar.gz"
         "https://github.com/mathjax/MathJax/archive/${_mjver}/MathJax-${_mjver}.tar.gz"
         '0001-chrono-9.0.1-fix-build.patch'
         '0002-chrono-9.0.1-not-install-irrlicht.patch'
         '0003-chrono-9.0.1-fix-python.patch'
         '0004-chrono-9.0.1-local-mathjax.patch'
-        '0005-chrono-9.0.1-not-install-glew-and-glfw.patch')
+        '0005-chrono-9.0.1-not-install-glew-and-glfw.patch'
+        '0006-chrono-9.0.1-vsg-shadow-settings.patch')
 sha256sums=('86da726ed3e3bacf682666b21d9c95dc87746b026dbafc722051a3202b822d39'
             'c9167279c87da044f2ff910ad573a02ce90354cb59440ae568eb86e1630f65df'
             '22e6a9521e790eee407551202418d4332068e95022c1bd8c8c5dd3eca2035e78'
             '5c5f70d2c134fc90f52484f36e84464f7e040e483a09cc81a425ff2589377477'
             '2874a51c3cdb3848440e47b37b8d94624a90f59e10a97ae96d3378707aa942cc'
             '230a216716facc7d0633b175b968a419816ca72b9225ac07613d6278216ae41f'
-            '1a4a34516b1667eb219ee17f15ac8359348874956a3f2094d70668f0cc0d573c')
+            '1a4a34516b1667eb219ee17f15ac8359348874956a3f2094d70668f0cc0d573c'
+            '56c0aa5fa0e2fe7b43026288cfce5c92afb83181bcd57445482481cfd6c8ca81')
 
 prepare() {
   cd "${_basename}-${pkgver}"
@@ -49,6 +55,7 @@ prepare() {
   patch -Np1 -i "${srcdir}"/0003-chrono-9.0.1-fix-python.patch
   patch -Np1 -i "${srcdir}"/0004-chrono-9.0.1-local-mathjax.patch
   patch -Np1 -i "${srcdir}"/0005-chrono-9.0.1-not-install-glew-and-glfw.patch
+  patch -Np1 -i "${srcdir}"/0006-chrono-9.0.1-vsg-shadow-settings.patch
 }
 
 build() {
@@ -67,6 +74,7 @@ build() {
       -DBUILD_{SHARED,STATIC}_LIBS=ON \
       -DENABLE_MODULE_IRRLICHT=ON \
       -DENABLE_MODULE_OPENGL=ON \
+      -DENABLE_MODULE_VSG=ON \
       -DENABLE_MODULE_PYTHON=ON \
       -DIRRLICHT_INSTALL_DIR="${MINGW_PREFIX}" \
       -DBUILD_TESTING=ON \
