llvm: update to 19.1.4

--- a/mingw-w64-llvm-openmp/PKGBUILD
+++ b/mingw-w64-llvm-openmp/PKGBUILD
@@ -7,11 +7,11 @@ fi
 _realname=openmp
 pkgbase=mingw-w64-llvm-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-llvm-${_realname}")
-_version=19.1.3
+_version=19.1.4
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
-pkgrel=2
+pkgrel=1
 pkgdesc="LLVM OpenMP Library (mingw-w64)"
 url="https://openmp.llvm.org/"
 msys2_references=(
@@ -19,7 +19,7 @@ msys2_references=(
 )
 license=("spdx:Apache-2.0 WITH LLVM-exception")
 arch=(any)
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 groups=($( (( _clangprefix )) && echo "${MINGW_PACKAGE_PREFIX}-toolchain"))
 replaces=("${MINGW_PACKAGE_PREFIX}-openmp")
 conflicts=("${MINGW_PACKAGE_PREFIX}-openmp")
@@ -38,9 +38,9 @@ source=($_url/$_pkgfn.tar.xz{,.sig}
         ${_url}/cmake-${pkgver}.src.tar.xz{,.sig}
         "001-cast-to-make-gcc-happy.patch"
         "002-hacks-for-static-linking.patch")
-sha256sums=('6c671756d7412bbf0085e7deffc7e8b4ac34955b33dce76c526795df1e9b48a7'
+sha256sums=('88359996537b0fe7191869f7a1ec8b5a0e7e284294c09202965efcce1e571ccb'
             'SKIP'
-            '4c55aa6e77fc0e8b759bca2c79ee4fd0ea8c7fab06eeea09310ae1e954a0af5e'
+            'dd13ce8eba6ece85cad567f028b8e16d72f3e142cdcbbd693ac23a88b4013803'
             'SKIP'
             '11352ffbe7559a7170f2abd52b3552c877fbcf8fc82cff77b421e8b130a4dd66'
             '08e39ea52a99204528740196a13cc29daf1b65a6e230fbd7bdd745dde5d11ef3')
