--- a/mingw-w64-libclc/PKGBUILD
+++ b/mingw-w64-libclc/PKGBUILD
@@ -3,14 +3,14 @@
 _realname=libclc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_version=19.1.3
+_version=19.1.4
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
 pkgrel=1
 pkgdesc='Library requirements of the OpenCL C programming language (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://libclc.llvm.org/'
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-clang"
@@ -23,7 +23,7 @@ _pkgfn=$_realname-$pkgver.src
 source=($_url/$_pkgfn.tar.xz{,.sig}
         0001-cmake-copy-instead-symlink.patch
         0002-fix-pkgconfig-file.patch)
-sha256sums=('b49fab401aaa65272f0480f6d707a9a175ea8e68b6c5aa910457c4166aa6328f'
+sha256sums=('d73969262195a0aef9643c80431f46061353c41021951bd96cf25e912cec5077'
             'SKIP'
             '0f2b0f1d33e1a14e1e6cc5d3f5ec37b961a775317dd2c58dd530cc8abb06bcd9'
             'f0c995d679214dbb1248f15365c6d26440efa0afc76402172068456f99109c25')
