--- a/mingw-w64-polly/PKGBUILD
+++ b/mingw-w64-polly/PKGBUILD
@@ -7,7 +7,7 @@ fi
 _realname=polly
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_version=19.1.3
+_version=19.1.4
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
@@ -15,21 +15,20 @@ pkgrel=1
 pkgdesc="Polly - Polyhedral optimizations for LLVM (mingw-w64)"
 url="https://polly.llvm.org/"
 arch=(any)
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=("spdx:Apache-2.0 WITH LLVM-exception")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-llvm"
-             "${MINGW_PACKAGE_PREFIX}-python-sphinx"
 )
 _url=https://github.com/llvm/llvm-project/releases/download/${_tag}
 _pkgfn=$_realname-$pkgver.src
 source=($_url/$_pkgfn.tar.xz{,.sig}
         ${_url}/cmake-${pkgver}.src.tar.xz{,.sig})
-sha256sums=('f86aa241e5ff70037ccaf365924dfe44b4605090057613ac1bdcc183aa95a387'
+sha256sums=('d09eda4f511994b0be77c47bcdfd30ed0e463f731368720e5b58c9fcffab2fe8'
             'SKIP'
-            '4c55aa6e77fc0e8b759bca2c79ee4fd0ea8c7fab06eeea09310ae1e954a0af5e'
+            'dd13ce8eba6ece85cad567f028b8e16d72f3e142cdcbbd693ac23a88b4013803'
             'SKIP')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
@@ -58,7 +57,6 @@ build() {
     -DCMAKE_SYSTEM_IGNORE_PATH=/usr/lib \
     -DLLVM_HOST_TRIPLE="${CARCH}-w64-windows-gnu" \
     -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python.exe \
-    -DLLVM_ENABLE_SPHINX=ON \
     -DLLVM_LINK_LLVM_DYLIB=ON \
     -Wno-dev \
     ../$_pkgfn
