libheif: enable uncompressed codec

--- a/mingw-w64-libheif/PKGBUILD
+++ b/mingw-w64-libheif/PKGBUILD
@@ -70,6 +70,7 @@ build() {
       -DWITH_OpenJPEG_ENCODER=ON \
       -DWITH_OPENJPH_ENCODER=$( [[ ${CARCH} == i686 ]] &&
                         echo "OFF" || echo "ON" ) \
+      -DWITH_UNCOMPRESSED_CODEC=ON \
       -DX265_CFLAGS="-DX265_API_IMPORTS" \
       ../${_realname}-${pkgver}
 
