lldb-mi: do not depend on llvm.

--- a/mingw-w64-lldb-mi/PKGBUILD
+++ b/mingw-w64-lldb-mi/PKGBUILD
@@ -4,17 +4,22 @@ _realname=lldb-mi
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=r93.a6c8c66
-pkgrel=1
+pkgrel=2
 pkgdesc="LLDB's machine interface driver (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://lldb.llvm.org/"
+msys2_repository_url="https://github.com/lldb-tools/lldb-mi"
+msys2_references=(
+  'archlinux: lldb-mi'
+)
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-lldb"
-         "${MINGW_PACKAGE_PREFIX}-llvm")
-makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-llvm"
              'git')
 _commit='a6c8c66d70b13209f3dabba5b6aefb2c58c3976c'
 source=("${_realname}"::"git+https://github.com/lldb-tools/lldb-mi.git#commit=${_commit}")
@@ -50,5 +55,6 @@ package() {
 
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
 
-  install -Dm644 "${srcdir}/${_realname}/LICENSE.TXT" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.TXT"
+  install -Dm644 "${srcdir}"/${_realname}/LICENSE.TXT \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.TXT
 }
