update godot to use MSYS2 libs

--- a/mingw-w64-godot/PKGBUILD
+++ b/mingw-w64-godot/PKGBUILD
@@ -1,5 +1,5 @@
-# Maintainer: Sarah Ottinger <schalaalexiazeal@gmail.com>
-# Update to 4.3-stable and modified by: Felix Xing (Felixaszx) felixxing3009@outlook.com
+# Previous maintainer: Sarah Ottinger <schalaalexiazeal@gmail.com>
+# Update to 4.3-stable and maintained by: Felix Xing (Felixaszx) felixxing3009@outlook.com
 # Base on Arch Linux: https://gitlab.archlinux.org/archlinux/packaging/packages/godot/
 
 _realname=godot
@@ -18,16 +18,36 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 makedepends=("make"
              "${MINGW_PACKAGE_PREFIX}-gcc"
+             "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-scons")
-depends=()
+depends=("${MINGW_PACKAGE_PREFIX}-brotli"
+         "${MINGW_PACKAGE_PREFIX}-embree"
+         "${MINGW_PACKAGE_PREFIX}-enet"
+         "${MINGW_PACKAGE_PREFIX}-freetype"
+         "${MINGW_PACKAGE_PREFIX}-glslang"
+         "${MINGW_PACKAGE_PREFIX}-graphite2"
+         "${MINGW_PACKAGE_PREFIX}-harfbuzz"
+         "${MINGW_PACKAGE_PREFIX}-harfbuzz-icu"
+         "${MINGW_PACKAGE_PREFIX}-icu"
+         "${MINGW_PACKAGE_PREFIX}-libogg"
+         "${MINGW_PACKAGE_PREFIX}-libpng"
+         "${MINGW_PACKAGE_PREFIX}-libtheora"
+         "${MINGW_PACKAGE_PREFIX}-libvorbis"
+         "${MINGW_PACKAGE_PREFIX}-libwebp"
+         "${MINGW_PACKAGE_PREFIX}-wslay"
+         "${MINGW_PACKAGE_PREFIX}-mbedtls"
+         "${MINGW_PACKAGE_PREFIX}-openxr-sdk"
+         "${MINGW_PACKAGE_PREFIX}-libsquish"
+         "${MINGW_PACKAGE_PREFIX}-zlib"
+         "${MINGW_PACKAGE_PREFIX}-zstd")
 optdepends=()
 source=("https://github.com/godotengine/godot/releases/download/${pkgver}-stable/${_realname}-${pkgver}-stable.tar.xz")
 sha256sums=('751e55bfad8e04b846f9cf7b6eb80e058986a2cb1b103fc0fe6a4d8526a20e56')
 
 prepare() {
   cd ${_realname}-${pkgver}-stable
-
   patch -p1 -i "../../001-fix-llvm-duplicate-symbol.patch"
+  patch -p1 -i "../../002-enforcing-pkgconfig-for-syslib.patch"
 }
 
 build() {
@@ -44,7 +64,27 @@ build() {
     target=editor \
     optimize=speed\
     production=yes\
-    use_mingw=yes \
+    use_mingw=yes\
+    use_static_cpp=no\
+    builtin_brotli=no\
+    builtin_embree=no\
+    builtin_enet=no\
+    builtin_freetype=no\
+    builtin_glslang=no\
+    builtin_graphite=no\
+    builtin_harfbuzz=no\
+    builtin_icu4c=no\
+    builtin_libogg=no\
+    builtin_libpng=no\
+    builtin_libtheora=no\
+    builtin_libvorbis=no\
+    builtin_libwebp=no\
+    builtin_wslay=no\
+    builtin_mbedtls=no\
+    builtin_openxr=no\
+    builtin_squish=no\
+    builtin_zlib=no\
+    builtin_zstd=no\
     "${extra_config[@]}"
 }
 
