ossia-score: disable BLE until next release

--- a/mingw-w64-ossia-score/PKGBUILD
+++ b/mingw-w64-ossia-score/PKGBUILD
@@ -63,6 +63,7 @@ build() {
     CXXFLAGS+=" -fexperimental-library"
   fi
 
+  rm -rf "${srcdir}/${_realname}-${pkgver}/src/addons/score-addon-ble"
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake -Wno-dev -GNinja \
     -S "${srcdir}/${_realname}-${pkgver}" \
