vigra: llvm19 build fixes
See https://github.com/ukoethe/vigra/issues/591

--- a/mingw-w64-vigra/PKGBUILD
+++ b/mingw-w64-vigra/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.12.1
 _pkgver=${pkgver//./-}
-pkgrel=1
+pkgrel=2
 pkgdesc="vigra - Generic Programming for Computer Vision (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -34,13 +34,15 @@ source=(https://github.com/ukoethe/vigra/archive/Version-${_pkgver}/${_realname}
         0002-fix-configuring-with-cmake.patch
         0014-python-module.ext.patch
         0015-cmake-files-location.patch
-        0016-Fix-FindOpenEXR.patch)
+        0016-Fix-FindOpenEXR.patch
+        0020-Fix-llvm19-build.patch)
 sha256sums=('8836a40a340f96ed2abf53780e883c5bf58002eb182cfccb4255b553ca48db33'
             '3eb264733fa81e3605000048e292a76b5bb4727d7c42fd1114dc66eacfa6b012'
             'fbc265cdc6e73e7ae566a11a2835660cc88509801e1351837499a6a02d58a696'
             'b981e9837a864badf6d892623d33565848dea2dbe4f669535c94a0d0282dfbed'
             '06e3f1ca5ad4dfa5a96194843445bbe6b6f9cf14865630ac0bae38f2beec9d41'
-            '2572717e39f916c7c463b8f49306b683c5923906be2721f7da181c58b3a2b34b')
+            '2572717e39f916c7c463b8f49306b683c5923906be2721f7da181c58b3a2b34b'
+            '913dcb9206f7a0e118197971051e8e3e59faf0420f2f8a40cee52dfabb513848')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -59,6 +61,10 @@ prepare() {
     0014-python-module.ext.patch \
     0015-cmake-files-location.patch \
     0016-Fix-FindOpenEXR.patch
+
+  # https://github.com/ukoethe/vigra/issues/591
+  apply_patch_with_msg \
+    0020-Fix-llvm19-build.patch
 }
 
 build() {
