Add char_traits workaround for clang 19

--- a/mingw-w64-freecad/PKGBUILD
+++ b/mingw-w64-freecad/PKGBUILD
@@ -47,9 +47,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-microsoft-gsl"
              "${MINGW_PACKAGE_PREFIX}-utf8cpp")
 source=("https://github.com/FreeCAD/FreeCAD/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "https://github.com/Ondsel-Development/OndselSolver/archive/${_OS_commit}/OndselSolver-${_OS_commit}.tar.gz")
+        "https://github.com/Ondsel-Development/OndselSolver/archive/${_OS_commit}/OndselSolver-${_OS_commit}.tar.gz"
+        "001-clang19-char-traits.patch")
 sha256sums=('51115afd8e3b89f4bac343b986b0800d8e1c68fc1e322c3cd179cfe1033ef937'
-            '061f651f503f1ec5a9814e174cdb8a9ba84d511a3b8be3d94852e84976c6b158')
+            '061f651f503f1ec5a9814e174cdb8a9ba84d511a3b8be3d94852e84976c6b158'
+            '0dcc9a5ce20f080913f2bff71f5e2eb7d166e789f1012cea2009f94c9f30e5f2')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -63,6 +65,9 @@ prepare() {
   mv OndselSolver-*/* ${_realname}-${pkgver}/src/3rdParty/OndselSolver/
 
   cd ${_realname}-${pkgver}
+
+  apply_patch_with_msg \
+    001-clang19-char-traits.patch
 }
 
 build() {
